parser/src/parser/expressions/snapshots/tests__parser::expressions::closure_expr::tests::parse_empty_closure_expr.snap
---
created: "2020-05-06T10:43:11.760635100Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/closure_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 40)
  FN_DEF@[0; 40)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 40)
      BLOCK@[10; 40)
        L_CURLY@[10; 11) "{"
        WHITESPACE@[11; 20) "\n        "
        LET_STMT@[20; 33)
          LET_KW@[20; 23) "let"
          WHITESPACE@[23; 24) " "
          BIND_PAT@[24; 25)
            NAME@[24; 25)
              IDENT@[24; 25) "a"
          WHITESPACE@[25; 26) " "
          EQ@[26; 27) "="
          WHITESPACE@[27; 28) " "
          CLOSURE_EXPR@[28; 33)
            PIPE@[28; 29) "|"
            PIPE@[29; 30) "|"
            WHITESPACE@[30; 31) " "
            BLOCK_EXPR@[31; 33)
              BLOCK@[31; 33)
                L_CURLY@[31; 32) "{"
                R_CURLY@[32; 33) "}"
        SEMI@[33; 34) ";"
        WHITESPACE@[34; 39) "\n    "
        R_CURLY@[39; 40) "}"

