parser/src/parser/expressions/snapshots/tests__parser::expressions::closure_expr::tests::parse_free_closure_expr.snap
---
created: "2020-05-06T10:43:11.760613Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/closure_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 32)
  FN_DEF@[0; 32)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 32)
      BLOCK@[10; 32)
        L_CURLY@[10; 11) "{"
        WHITESPACE@[11; 20) "\n        "
        EXPR_STMT@[20; 25)
          CLOSURE_EXPR@[20; 25)
            PIPE@[20; 21) "|"
            PIPE@[21; 22) "|"
            WHITESPACE@[22; 23) " "
            BLOCK_EXPR@[23; 25)
              BLOCK@[23; 25)
                L_CURLY@[23; 24) "{"
                R_CURLY@[24; 25) "}"
        SEMI@[25; 26) ";"
        WHITESPACE@[26; 31) "\n    "
        R_CURLY@[31; 32) "}"

