parser/src/parser/expressions/snapshots/tests__parser::expressions::closure_expr::tests::parse_simple_closure_expr.snap
---
created: "2020-05-06T10:43:11.760684800Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/closure_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 96)
  WHITESPACE@[0; 9) "\n        "
  FN_DEF@[9; 96)
    FN_KW@[9; 11) "fn"
    WHITESPACE@[11; 12) " "
    NAME@[12; 16)
      IDENT@[12; 16) "main"
    PARAM_LIST@[16; 18)
      L_PAREN@[16; 17) "("
      R_PAREN@[17; 18) ")"
    WHITESPACE@[18; 19) " "
    BLOCK_EXPR@[19; 96)
      BLOCK@[19; 96)
        L_CURLY@[19; 20) "{"
        WHITESPACE@[20; 33) "\n            "
        LET_STMT@[33; 95)
          LET_KW@[33; 36) "let"
          WHITESPACE@[36; 37) " "
          BIND_PAT@[37; 38)
            NAME@[37; 38)
              IDENT@[37; 38) "a"
          WHITESPACE@[38; 39) " "
          EQ@[39; 40) "="
          WHITESPACE@[40; 41) " "
          CLOSURE_EXPR@[41; 90)
            PIPE@[41; 42) "|"
            PARAM@[42; 43)
              BIND_PAT@[42; 43)
                NAME@[42; 43)
                  IDENT@[42; 43) "x"
            COMMA@[43; 44) ","
            PARAM@[44; 45)
              BIND_PAT@[44; 45)
                NAME@[44; 45)
                  IDENT@[44; 45) "y"
            PIPE@[45; 46) "|"
            WHITESPACE@[46; 47) " "
            BLOCK_EXPR@[47; 90)
              BLOCK@[47; 90)
                L_CURLY@[47; 48) "{"
                WHITESPACE@[48; 65) "\n                "
                EXPR_STMT@[65; 75)
                  RETURN_EXPR@[65; 75)
                    RETURN_KW@[65; 71) "return"
                    WHITESPACE@[71; 72) " "
                    BIN_EXPR@[72; 75)
                      IDENT_EXPR@[72; 73)
                        NAME@[72; 73)
                          IDENT@[72; 73) "x"
                      PLUS@[73; 74) "+"
                      IDENT_EXPR@[74; 75)
                        NAME@[74; 75)
                          IDENT@[74; 75) "y"
                SEMI@[75; 76) ";"
                WHITESPACE@[76; 89) "\n            "
                R_CURLY@[89; 90) "}"
          WHITESPACE@[90; 95) "\n    "
        R_CURLY@[95; 96) "}"

