parser/src/parser/expressions/snapshots/tests__parser::expressions::continue_expr::tests::parse_continue_expr.snap
---
created: "2020-05-06T10:43:11.846801200Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/continue_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 21)
  FN_DEF@[0; 21)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 21)
      BLOCK@[10; 21)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 19)
          CONTINUE_EXPR@[11; 19)
            CONTINUE_KW@[11; 19) "continue"
        SEMI@[19; 20) ";"
        R_CURLY@[20; 21) "}"

